Update Blog Post “2020-04-19-test-blog-1”

--- a/content/blog/2020-04-19-test-blog-1.md
+++ b/content/blog/2020-04-19-test-blog-1.md
@@ -1,7 +1,10 @@
 ---
 title: Test blog 1
 date: 2020-04-19T12:14:45.018Z
+thumbnail: https://res.cloudinary.com/luvuong-le/image/upload/v1587627986/samples/landscapes/nature-mountains.jpg
 description: testing
+tags:
+  - UX / UI
 ---
 
 esting
